--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "homepage": "https://github.com/scaret/node-elfinder",
   "dependencies": {
+    "body-parser": "^1.10.2",
+    "cookie-parser": "^1.3.3",
     "express": "^4.11.1",
     "pkgcloud": "^1.2.0-alpha.0",
     "socket.io": "^1.3.2"
