--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "body-parser": "^1.10.2",
     "cookie-parser": "^1.3.3",
     "express": "^4.11.1",
+    "mime": "^1.2.11",
+    "moment": "^2.9.0",
     "pkgcloud": "^1.2.0-alpha.0",
-    "socket.io": "^1.3.2"
+    "socket.io": "^1.3.2",
+    "underscore": "^1.7.0"
   }
 }
