--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/scaret/node-elfinder",
   "dependencies": {
     "body-parser": "^1.10.2",
+    "busboy": "^0.2.9",
     "cookie-parser": "^1.3.3",
     "express": "^4.11.1",
     "mime": "^1.2.11",
